proj1/tests/other-tests/oskis-angels_tests/error/function-in-while.py
while True:
    def a():
        return 10
